--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -120,38 +120,41 @@
 
 
 
-	  <section data-panel="section-4" class="submit-page">
-		  <h4>Abschluss</h4>
-		  <p>Fast geschafft!</p>
-		  <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
-		  <p>PIN: [ ] [ ] [ ] [ ]</p>
-		  <p><a href="#">Code erneut senden</a></p>
-          <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
-		  <div id="userdata-summary" class="hidden">
-			  <p>
-				  Mit folgenden Daten kann sich
-				  <b data-from="student-firstname"></b>
-				  <b data-from="student-secondname"></b>
-				  in der Schul-Cloud anmelden. Bitte bewahren Sie die Anmeldedaten auf.
-				  <div class="print">
-					  <div class="recap">
-						  <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
-						  <p>E-Mail: <i data-from="student-email"></i></p>
-						  <p>Passwort: <i class="student-password">********</i></p>
-					  </div>
-					  <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
-						  <i class="fa fa-print"></i> Drucken
-					  </div>
-                </div>
-			  </p>
+      <section data-panel="section-4" class="submit-page">
+        <h4>Abschluss</h4>
+        <p>Fast geschafft!</p>
+        <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
 
-				<label>
-					<input name="sendCredentials" type="checkbox" value="sendCredentials" />
-					Login-Daten per E-Mail an angegebene Adressen senden
-				</label>
-				<p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
-		  </div>
-	  </section>
+        {{#embed "administration/forms/pin" digits=5 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+        <button id="submit-pin" class="btn btn-primary">CHECK</button>
+
+        <p><a href="#">Code erneut senden</a></p>
+            <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
+        <div id="userdata-summary" class="hidden">
+          <p>
+            Mit folgenden Daten kann sich
+            <b data-from="student-firstname"></b>
+            <b data-from="student-secondname"></b>
+            in der Schul-Cloud anmelden. Bitte bewahren Sie die Anmeldedaten auf.
+            <div class="print">
+              <div class="recap">
+                <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
+                <p>E-Mail: <i data-from="student-email"></i></p>
+                <p>Passwort: <i class="student-password">********</i></p>
+              </div>
+              <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
+                <i class="fa fa-print"></i> Drucken
+              </div>
+                  </div>
+          </p>
+
+          <label>
+            <input name="sendCredentials" type="checkbox" value="sendCredentials" />
+            Login-Daten per E-Mail an angegebene Adressen senden
+          </label>
+          <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
+        </div>
+      </section>
 
 
 
