create class is working (except backend)

--- a/views/administration/forms/form-classes-create.hbs
+++ b/views/administration/forms/form-classes-create.hbs
@@ -47,7 +47,7 @@
         </div>
         <div class="form-group col-sm-6 col-xs-12">
             <label>Klassenbezeichnung</label>
-            <input class="form-control linked" name="classsuffix" type="text" placeholder="a, b, c, ..., I, II, III, ..., etc." required/>
+            <input class="form-control linked" name="classsuffix" type="text" placeholder="a, b, c, ..., I, II, III, ..., etc."/>
         </div>
     </div>
     <p>Deine Schule passt nicht ins klassische Schema? <a href="#" class="createcustom">Mehr Optionen</a>.</p>
@@ -55,7 +55,7 @@
         <p>Du kannst Jahrgangsunabhängige Klassen mit freier Bezeichnung erstellen. Diese Klassen können nicht vom Administrator <i>"versetzt"</i> werden, sondern müssen manuell aktualisiert werden.</p>
         <div class="form-group">
             <label>Klassenbezeichnung</label>
-            <input class="form-control linked" name="classcustom" type="text" placeholder="z.B. Froschklasse 3-4" disabled/>
+            <input class="form-control linked" name="classcustom" type="text" placeholder="z.B. Froschklasse 3-4" required disabled/>
         </div>
         <label>
             <input name="keepyear" type="checkbox" value="true" checked disabled/>
