fix classes overview & started /edit

--- a/views/classes/create.hbs
+++ b/views/classes/create.hbs
@@ -6,6 +6,7 @@
 
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/classes/classes.css"/>
+        <!-- dataprivacy is only used for .recap -->
         <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
     {{/content}}
 
