--- a/views/classes/edit.hbs
+++ b/views/classes/edit.hbs
@@ -9,11 +9,9 @@
     {{/content}}
 
     {{#content "page"}}
-        <section class="section-classes">
-            <form class="modal-form" method="post" action="">
+        <section class="section-classes-edit">
+            <form class="edit-form" method="update" action="">
                 {{> "administration/forms/form-classes-edit"}}
-                <a href="/classes" class="btn btn-secondary">Abbrechen</a>
-                <button class="btn btn-primary" type="submit">Änderungen speichern</button>
             </form>
         </section>
     {{/content}}
