pin generation draft

--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -88,25 +88,33 @@
 
 
       <section data-panel="section-3" class="submit-page">
-        <h4>Abschluss</h4>
-        <p>Fast geschafft! Mit folgenden Daten kannst du dich in der Schul-Cloud anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.
-          <div class="print">
-            <div class="recap">
-              <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
-              <p>E-Mail: <i data-from="student-email"></i></p>
-              <p>Passwort: <i class="student-password">********</i></p>
-            </div>
-             <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
-              <i class="fa fa-print"></i> Drucken
-            </div>
-          </div>
-        </p>
+          <h4>Abschluss</h4>
+          <p>Fast geschafft!</p>
+          <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
+          <div id="tempPin" class="hidden"></div>
+          {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+          <button id="submit-pin" class="btn btn-primary">CHECK</button>
 
-        <label>
-            <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
-            Login-Daten per E-Mail an angegebene Adressen senden
-        </label>
-        <p>Beim ersten Login muss ein neues Passwort gewählt werden.</p>
+          <p><a href="#">Code erneut senden</a></p>
+          <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
+          <div id="userdata-summary" class="hidden">
+              <p>Mit folgenden Daten kannst du dich in der Schul-Cloud anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
+              <div class="print">
+                <div class="recap">
+                  <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
+                  <p>E-Mail: <i data-from="student-email"></i></p>
+                  <p>Passwort: <i class="student-password">********</i></p>
+                </div>
+                 <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
+                  <i class="fa fa-print"></i> Drucken
+                </div>
+              </div>
+                <label>
+                    <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
+                    Login-Daten per E-Mail an angegebene Adressen senden
+                </label>
+                <p>Beim ersten Login muss ein neues Passwort gewählt werden.</p>
+          </div>
       </section>
 
 
