--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -120,15 +120,15 @@
 
 
 
-      <section data-panel="section-4" class="submit-page">
+      <section data-panel="section-4" class="submit-page" data-feature="pinValidation">
         <h4>Abschluss</h4>
         <p>Fast geschafft!</p>
         <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
-
-        {{#embed "administration/forms/pin" digits=5 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+        <div id="tempPin" class="hidden"></div>
+        {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
         <button id="submit-pin" class="btn btn-primary">CHECK</button>
 
-        <p><a href="#">Code erneut senden</a></p>
+        <p><a if="resendPin" href="#">Code erneut senden</a></p>
             <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
         <div id="userdata-summary" class="hidden">
           <p>
