page texte soweit fertig, passwortvalidierung, namen einsetzen fehlt

--- a/views/administration/dataprivacy/firstLoginU14.hbs
+++ b/views/administration/dataprivacy/firstLoginU14.hbs
@@ -6,16 +6,16 @@
   {{#content "styles" mode="append"}}
       <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
-
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  {{/content}}
+ {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=4 action="#" method="get"}}
+    {{#embed "lib/forms/paginatedForm" sections=4 action="" method=""}}
       {{#content "panels"}}
+
       <section data-panel="section-1">
         <h4>Herzlich Willkommen in der Schul-Cloud, {Vorname, Nachname}</h4>
         <p>Wir freuen uns, dass du die Schul-Cloud nutzen möchtest.</p>
         <p>Bitte überprüfe in den kommenden Schritten die für dich angegebene E-Mail-Adresse und ändere dein Startpasswort.</p>
+        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der Schul-Cloud die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ????🦄</p>
       </section>
 
 
@@ -25,13 +25,13 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>E-Mail:</label>
-              <input class="form-control" type="email" placeholder="schueler@schul-cloud.org"></input>
+              <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
           </div>
         </div>
       </section>
 
 
-      <section data-panel="section-3">
+      <section data-panel="section-3" class="submit-page">
         <h4>Du hast es fast geschafft...</h4>
         <p>Bitte ändere das Startpasswort. Notiere dir das neue Passwort gleich und bewahre es gut auf!</p>
          <div class="row">
@@ -53,8 +53,8 @@
 
       <section data-panel="section-4">
         <h4>Fertig!</h4>
-        <i class="fas fa-check fa-4x" style="color:green"></i>
         <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud starten.</p>
+        <a class="btn btn-primary" href="//schul-cloud.org">Schul-Cloud erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
