pin verification nearly done
pin creation working, pin check yet accepts every pin but nearly done

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -124,12 +124,13 @@
         <h4>Abschluss</h4>
         <p>Fast geschafft!</p>
         <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
-        <div id="tempPin" class="hidden"></div>
-        {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
-        <button id="submit-pin" class="btn btn-primary">CHECK</button>
-
-        <p><a if="resendPin" href="#">Code erneut senden</a></p>
-            <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
+        <div id="pinverification">
+            <button id="send-pin" class="btn btn-primary">PIN jetzt zusenden</button>
+            <div id="temp-pin" class="hidden"></div>
+            {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+            <button id="check-pin" class="btn btn-primary">prüfen</button>
+            <p><a id="resend-pin" href="#">Code erneut senden</a></p>
+        </div>
         <div id="userdata-summary" class="hidden">
           <p>
             Mit folgenden Daten kann sich
