--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -46,7 +46,7 @@
               <option value="male">männlich</option>
               <option value="female">weiblich</option>
               <option value="other">anderes</option>
-              <option value="other">keine Angabe</option>
+              <option value="noinfo">keine Angabe</option>
             </select>
           </div>
         </div>
@@ -87,16 +87,16 @@
       </section>
 
 
-      <section data-panel="section-3" class="submit-page">
+      <section data-panel="section-3" class="submit-page" data-feature="pin">
           <h4>Abschluss</h4>
           <p>Fast geschafft!</p>
           <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
-          <button id="send-pin" class="btn btn-primary">PIN jetzt zusenden</button>
-          <div id="temp-pin" class="hidden"></div>
-          {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
-          <button id="check-pin" class="btn btn-primary">prüfen</button>
-          <p><a id="resend-pin" href="#">Code erneut senden</a></p>
-          <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
+          <div id="pinverification">
+              <div id="temp-pin" class="hidden"></div>
+              {{#embed "administration/forms/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
+              <button id="check-pin" class="btn btn-primary">prüfen</button>
+              <p><a id="resend-pin" href="#">Code erneut senden</a></p>
+          </div>
           <div id="userdata-summary" class="hidden">
               <p>Mit folgenden Daten kannst du dich in der Schul-Cloud anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
               <div class="print">
