[WIP] use vue in my-material view

--- a/views/my-material/my-material.hbs
+++ b/views/my-material/my-material.hbs
@@ -1,20 +1,33 @@
 {{#extend "lib/loggedin" hideSearch="true"}}
 
+    {{#content "scripts" mode="append"}}
+        <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script> -->
+        <script src="/scripts/vendor-vue.js" defer></script>
+        <script src="/scripts/my-material.js" defer></script>
+    {{/content}}
+
     {{#content "page"}}
+
+        <div id="app">
+        </div>
+
         <p>
           Hier werden Sie bald die Möglichkeit haben, eigene Inhalte zu erstellen, sich Inhalte anderer Lehrer*Innen anzuschauen und durch Bewerten und Kategorisieren dieser Punkte verdienen, um die erweiterten Suchfunktionen nutzen zu können. Interessiert, wie das funktionieren wird? Lesen Sie den <a href="https://blog.schul-cloud.org/unterrichtsvorbereitung-in-der-hpi-schul-cloud-neu-gedacht/" target="_blank">Blogartikel</a> und nutzen Sie die Möglichkeit, das Feature nach ihren Wünschen zu gestalten.
         </p>
 
         <form class="" action="/my-material/search" method="post">
-          <label for="term"></label>
-          <input type="text" name="term" value="Basketball" id="internal-search-input" placeholder="Suchbegriff">
-
-          <label for="subject"></label>
-          <input type="text" name="subject" value="Geographie" id="internal-search-subject" placeholder="Fach">
-
-          <label for="age"></label>
-          <input type="number" name="age" value="10" id="internal-search-age" placeholder="Alter">
-
+          <label for="term">Suchbegriff</label>
+          <input type="text" name="term" value="{{query.term}}" id="internal-search-input" placeholder="Suchbegriff">
+          <br>
+          <label for="subject">Fach</label>
+          <input type="text" name="subject" value="{{query.subject}}" id="internal-search-subject" placeholder="Fach">
+          <br>
+          <label for="age">Alter</label>
+          <input type="number" name="age" value="{{query.age}}" id="internal-search-age" placeholder="Alter">
+          <br>
+          <label for="only-approved">Nur bestätigte Inhalte: </label>
+          <input type="checkbox" name="only-approved" checked>
+          <br>
           <input type="submit" name="" value="Suchen">
         </form>
         <br>
@@ -47,9 +60,7 @@
 {{/extend}}
 
 
-<!-- {{ log proposals }}
-{{ log approved }}
-{{ log searchResults }}
+<!--
 <br>
 <br>
 <a href="/my-material/proposals">Vorgeschlagene Materialien</a>
