200 add amount of students to course info page (#715)
* First version, tooltip by hovering, but modal on click does not work yet

* Reset to current master

* Add modal to show all members of course. Preview showed by tooltip.

* Reverted a change I can't rember I made.

* Fixed a refactoring bug and deleted unnecessary white space.

* Adding a edit button if no students are added to course.

Added the button as @janrenz wished

* Fix opera and chrome bug

tested on chrome, opera, safari, firefox

* deleted tooltip, load modal content with ajax

* fix #topicList not defined issue, deleted console.log ...

* fix nightwatch test ?

* fix nightwatch 2

* little fix

* Adjust to PR notes

new route only for users
unneccessary helpers deleted
discussed the button problem and decided to keep it
fixed problem with substitution courses

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -156,6 +156,26 @@
     }
 }
 
+#member-modal-body {
+    columns: 3;
+    word-break: break-all;
+}
+
+#member-list {
+    li {
+        padding: 0px;
+        margin: 0px;
+    }
+}
+
+#course-edit {
+    text-align: right;
+}
+.modal-body {
+    max-height: 75vh;
+    overflow-y: auto;
+}
+
 .section-course-group {
     padding-top: 20px;
 }
