some progress on classes/:id/edit

--- a/views/classes/create.hbs
+++ b/views/classes/create.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/classes.js" type="text/javascript" defer></script>
+        <script src="/scripts/classes/create.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
