--- a/views/classes/overview.hbs
+++ b/views/classes/overview.hbs
@@ -51,7 +51,7 @@
 
                 {{#userHasPermission "COURSE_EDIT"}}
                     <div class="row padding-top">
-                        <a href="create" class="btn btn-add btn-primary">Klasse hinzufügen</a>
+                        <a href="/classes/create" class="btn btn-add btn-primary">Klasse hinzufügen</a>
                     </div>
                 {{/userHasPermission}}
             </div>
