--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -1,14 +1,25 @@
+<input class="form-control" name="classid" type="hidden" placeholder="10a" value="{{class._id}}"/>
 
 <div class="form-group">
-    <label>Name der Klasse</label>
-    <input class="form-control" name="name" type="text" placeholder="10a" required />
-</div>
-
-<div class="form-group">
-    <label>Klassenlehrer</label>
+    <label>Lehrer hinzufügen</label>
 
     <select name="teacherIds[]" multiple data-placeholder="Lehrer auswählen">
         {{#each teachers}}
+            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}} {{#if this.disabled}}disabled{{/if}}>
+                {{#if this.displayName}}
+                    {{this.displayName}}
+                {{else}}
+                    {{this.firstName}} {{this.lastName}}
+                {{/if}}
+            </option>
+        {{/each}}
+    </select>
+</div>
+<div class="form-group">
+    <label>Vertretungslehrer wählen</label>
+
+    <select name="substitutionIds[]" multiple data-placeholder="Vertretungslehrer auswählen">
+        {{#each substitutions}}
             <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
                 {{#if this.displayName}}
                     {{this.displayName}}
@@ -20,6 +31,18 @@
     </select>
 </div>
 
+<p>Füge bereits in der Schul-Cloud registrierte Schüler hinzu</p>
+<div class="form-group">
+    <label>Schüler aus Vorjahres-Klasse hinzufügen</label>
+
+    <select name="classes[]" multiple data-placeholder="Alte Klasse auswählen">
+        {{#each classes}}
+            <option value="{{this._id}}" {{#if this.selected}}selected{{/if}}>
+                {{this.name}}
+            </option>
+        {{/each}}
+    </select>
+</div>
 <div class="form-group">
     <label>Schüler</label>
 
@@ -34,4 +57,16 @@
             </option>
         {{/each}}
     </select>
+</div>
+
+<button type="submit" class="btn btn-primary">Änderungen speichern</button>
+<button type="submit" class="btn btn-secondary">Abbrechen</button>
+
+<p>Deine Schüler sind noch nicht in der SchulCloud?</p>
+<p>Lade die Eltern per Link ein, ihre Kinder in deiner Klasse zu registrieren und die elektronische Einwilligungserklärung abzugeben.</p>
+
+<input id="invitationLink" value="{{invitationLink}}" readonly/>
+<div class="row">
+    <button class="col-6 btn-link copy" data-copy-selector="#invitationLink">Link kopieren</button>
+    <button class="col-6 btn-link" id="printInvitation">Link mit QR-Code Drucken</button>
 </div>
