--- a/views/classes/edit.hbs
+++ b/views/classes/edit.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/classes.js" type="text/javascript" defer></script>
+        <script src="/scripts/classes/edit.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "styles" mode="append"}}
