--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/loggedin"}}
+{{#extend "registration/templates/registrationNew"}}
   {{#content "scripts" mode="append"}}
       <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
       <script src="/scripts/dataprivacy/registration.js" type="text/javascript" defer></script>
