--- a/views/content/forms/form-search.hbs
+++ b/views/content/forms/form-search.hbs
@@ -1,3 +1,11 @@
+{{#content "scripts" mode="append"}}
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script>
+{{/content}}
+
+<div id="app">
+  lksjdlksdjflksdjflkösadjflöksadjf sdfkls dflkasdj fglkasdjf sadlkfj
+</div>
+
 <form method="get">
     <div class="search-wrapper">
         <div class="input-group input-group-lg">
