--- a/views/content/search-results.hbs
+++ b/views/content/search-results.hbs
@@ -49,6 +49,6 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/content.js" type="text/javascript" defer></script>
+        <script src="/scripts/content/content.js" type="text/javascript" defer></script>
     {{/content}}
 {{/extend}}
