--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -52,7 +52,8 @@
     {{/content}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/content.js" type="text/javascript" defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js" defer></script>
+        <script src="/scripts/content/content.js" type="text/javascript" defer></script>
     {{/content}}
 
 {{/extend}}
