--- a/views/firstLogin/firstLogin.hbs
+++ b/views/firstLogin/firstLogin.hbs
@@ -84,11 +84,11 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
             <label>Neues Passwort: *</label>
-            <input class="form-control" name="password-1" type="password" placeholder="enter password" required/>
+              <input class="form-control" id="password" name="password-1" type="password" placeholder="Neues Passwort" minlength="8" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$" title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl und Sonderzeichen." required/>
           </div>
           <div class="form-group col-md-6 col-sm-12">
             <label>Wiederhole dein neues Passwort: *</label>
-            <input class="form-control" name="password-2" type="password" placeholder="enter password again" required/>
+            <input class="form-control" id="password_control" name="password-2" type="password" placeholder="Neues Passwort wiederholen" required/>
           </div>
         </div>
 
