adjust routes in hbs

--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/styles/lib/datetimepicker/jquery.datetimepicker.min.css"/>
   {{/content}}
   {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=4 action="/administration/dataprivacy/registration/submit" method="post" class="registration-form"}}
+    {{#embed "lib/forms/paginatedForm" sections=4 action="/registration/submit" method="post" class="registration-form"}}
       {{#content "panels"}}
       <section data-panel="section-1">
         <h4>Persönliche Daten</h4>
