--- a/views/registration/templates/registrationNew.hbs
+++ b/views/registration/templates/registrationNew.hbs
@@ -9,6 +9,7 @@
 
     {{#content "body"}}
         {{#embed "lib/header"}}{{/embed}}
+        <section class="content-wrapper">
         <main class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -20,6 +21,7 @@
             </div>
             </div>
         </main>
+        </section>
         {{#embed "lib/extended_footer"}}{{/embed}}
     {{/content}}
 {{/extend}}
