widerruf der ezd mit mailto

--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -60,14 +60,7 @@
             <span>Ich habe die <a href=" ">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
         </label>
 
-        <p></p>
-
-        <label>
-            Widerruf
-        </label>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit ex numquam quo voluptate ipsa modi porro cupiditate corrupti possimus praesentium! Vero doloremque porro amet est. In rem enim quo quia!
-        </p>
+          <p>Die Nutzung der Schul-Cloud ist freiwillig. Die erteilte Einwilligung kann daher jederzeit ohne Nachteile für den Nutzer widerrufen werden. Eine kurze Mail mit Angabe des Vor- und Nachnamens, der Klasse und der Schule an folgende Adresse genügt: <a href="mailto:widerruf@schul-cloud.org?subject=Widerruf der Einwilligung&body=Liebes Schul-Cloud-Team,%0D%0Ahiermit widerrufe ich die von mir erteilte EInwilligung zur Verarbeitung meiner personenbezogenen Daten.%0D%0A%0D%0AVor- und Nachname:%0D%0AKlasse:%0D%0ASchule:%0D%0A">widerruf@schul-clud.org</a></p>
       </section>
 
 
